[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scripts/Paths/PathCard.gd" id="1_card"]

[node name="PathCard" type="Control"]
custom_minimum_size = Vector2(250, 450)
layout_mode = 3
anchors_preset = 0
offset_right = 250.0
offset_bottom = 450.0
pivot_offset = Vector2(125, 225)
script = ExtResource("1_card")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.160784, 0.160784, 0.160784, 0.8)

[node name="Border" type="ReferenceRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
border_color = Color(1, 1, 1, 0.3)
border_width = 2.0
editor_only = false

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Icon" type="TextureRect" parent="VBox"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "หัวข้อเส้นทาง"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "คำอธิบายย่อ"
horizontal_alignment = 1

[node name="Description" type="Label" parent="VBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "รายละเอียดเพิ่มเติม..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Btn" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="mouse_entered" from="Btn" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Btn" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Btn" to="." method="_on_btn_pressed"]
